styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Mulish:ital,wght@0,400;0,500;0,700;0,800;0,900;1,600&display=swap');

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    font-family: 'Mulish', sans-serif;
}

.container {
    width: 81.35%;
    max-width: 73.125rem;
    margin: 0 auto;
}


/* nav section styles */
.nav-container {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-top: 3.25rem;
}

.nav-title {
    display: flex;
    align-items: center;
    gap: 1rem;
    color: #131318;
    font-size: 2.25rem;
    font-weight: 800;
}

.nav-title .special {
    color: #FF5400;
}

.nav-main ul {
    list-style-type: none;
    max-height: 70px;
    transition: all .5s;
}

.nav-main li {
    display: inline;
}

.nav-main a {
    text-decoration: none;
    margin-right: 1.9rem;
    color: #424247;
    text-align: center;
    font-family: Mulish;
    font-size: 18px;
    font-style: normal;
    font-weight: 400;
    line-height: normal;
}

.nav-main a:active {
    color: #FF5400;
}

.nav-main a:hover {
    color: #131318;
}
nav {
    position: relative;
}
#checkbox {
    display: none;
}
.menu-icon {
    display: none;
    visibility: hidden;
}

/* banner section styles  */

.banner-container {
    margin-top: 3.06rem;
    background-image: linear-gradient(180deg, rgba(19, 19, 24, 0.80) 0%, rgba(19, 19, 24, 0.00) 100%), url(../Images/banner.png);
    background-repeat: no-repeat;
    object-fit: cover;
    height: 31.25rem;
    border-radius: 1rem;
}

.banner-text {
    text-align: center;
    padding: 3rem;
    padding-top: 5rem;

}

.banner-text h1 {
    color: #FFF;
    font-size: 4rem;
    font-style: normal;
    font-weight: 800;
    margin-bottom: 1.2rem;
}

.banner-text p {
    color: #FFF;
    text-align: center;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5rem;
    /* 162.5% */
}

.banner-form {
    margin: 0 11rem;
    border-radius: .5rem;
    background: rgba(255, 255, 255, 0.30);
    background-size: contain;
    margin-bottom: 6.6rem;
    padding: .25rem;
}

.banner-form input,
select,
button {
    border-radius: .5rem;
    background: #FFF;
    border: none;
    color: rgba(19, 19, 24, 0.50);
    text-align: center;
    font-size: 1rem;
    font-weight: 400;
    padding: 1rem 1rem 1rem 1rem;
    margin-right: 1.5rem;
    outline: none;
    width: 10rem;
    margin-bottom: .2rem;

}

.banner-form .find {
    background: #FF5400;
    color: #FFF;
    font-weight: 700;
}

/* popular section styles  */
.popular {
    margin-top: 8rem;
    margin-bottom: 6.25rem;
}

.popular-main {
    display: flex;
    align-items: flex-start;
    gap: 1rem;
}

h2 {
    color: #131318;
    font-size: 2.5rem;
    font-weight: 800;
    margin-bottom: 1.3rem;
}

.popular-text p,
.destination-text p,
.choose p,
.newsletter-form p,
.footer-container p,
.place-container .place-pp,
.deal p, .about-text p {
    color: rgba(19, 19, 24, 0.70);
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.3rem;
    /* 162.5% */
    margin-bottom: 2rem;
}

.popular-image img {
    width: 100%;
}

.read {
    border-radius: .5rem;
    background: #FF5400;
    color: #FFF;
    text-align: center;
    font-size: 1.2rem;
    font-weight: 800;
    line-height: normal;
}

.fa-circle {
    font-size: .65rem;
    color: rgba(19, 19, 24, 0.70);
}

/* destination section styles */

.destination-text {
    text-align: center;
}

.destination-container {
    display: grid;
    gap: 1rem;
    grid-template-columns: repeat(12, 1fr);
    grid-template-rows: repeat(3, 1fr);
}

.destination-container img {
    object-fit: cover;
}

.destination-1 {
    grid-column: 1 / span 6;
    grid-row: 1 / span 6;
}

.destination-2 {
    grid-column: 7 / span 6;
    grid-row: 1 / span 1;
}

.destination-3 {
    grid-column: 1 / span 3;
    grid-row: 2 / span 1;
}

.destination-4 {
    grid-column: 5 / span 6;
    grid-row: 2 / span 1;
}

.destination-5 {
    grid-column: 10 / span 3;
    grid-row: 2 / span 1;
}

.destination-6 {
    grid-column: 1 / span 5;
    grid-row: 3 / span 1;
}

.destination-7 {
    grid-column: 6 / span 7;
    grid-row: 3 / span 1;
}


/* choose section styles */
.choose {
    margin-top: 9rem;
}

.choose h2,
.choose-text {
    text-align: center;
}

.choose-card {
    color: #131318;
    font-size: 1.2rem;
    font-weight: 800;
    padding: 2rem;
    border-radius: 1rem;
}

.choose-card * {
    margin-bottom: 2rem;
}

.choose-upper {
    display: flex;
    gap: 1.2rem;
    justify-content: space-between;
}

.left-card {
    border: 1px solid rgba(251, 181, 99, 0.20);
    background: rgba(251, 181, 99, 0.05);
    width: 50%;
}

.right-card {
    border: 1px solid rgba(41, 206, 246, 0.20);
    background: rgba(41, 206, 246, 0.05);
    width: 50%;
}

.lower-card {
    border: 1px solid rgba(251, 181, 99, 0.20);
    background: rgba(251, 181, 99, 0.05);
    width: 50%;
    margin-top: 1.2rem;
    justify-content: center;
}

.choose-lower {
    display: flex;
    justify-content: center;
}

/* deal section styles */

.deal-section {
    margin-top: 5rem;
}
.deal-section h2,
.deal-p {
    text-align: center;
}

.deal-p {
    color: rgba(19, 19, 24, 0.70);
    text-align: center;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.2rem;
    /* 162.5% */
}

.deal {
    border-radius: 1rem;
    border: 2px solid #FFF;
    background: rgba(255, 255, 255, 0.80);
    backdrop-filter: blur(2.5px);
    width: 30rem;
    height: 20rem;
    padding: 1rem;
}

.deal h5 {
    color: #131318;
    font-size: 1.2rem;
    font-weight: 800;
    margin-top: 1rem;
}

.deal-section .container {
    height: 31.25rem;
    margin-bottom: 1.25rem;
}

.deal .deal-price {
    color: #FF5400;
    font-size: 1.2rem;
    font-weight: 800;
}

.deal-container-1 {
    background-image: url('../Images/Group 39.png');
    display: flex;
    justify-content: flex-end;
    align-items: center;
    margin-top: 3rem;
}

.deal-container-1 .deal {
    margin-right: 2.25rem;
}

.deal-container-2 {
    background-image: url('../Images/Group 40.png');
    display: flex;
    align-items: center;
}

.deal-container-2 .deal {
    margin-left: 2rem;
}

.deal-container-3 {
    background-image: url('../Images/Group 39.png');
    display: flex;
    align-items: center;
    justify-content: flex-end;
}

.deal-container-3 .deal {
    margin-right: 2.25rem;
}





/* place section styles  */
.place-container {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;
    gap: 2rem;
    margin-top: 6rem;
}

.place-text {
    width: 48%;
}

.place-p {
    color: #131318;
    font-size: 1rem;
    font-weight: 700;
    line-height: 1.22rem;
    /* 162.5% */
    margin-bottom: 1rem;
}

.place-container .fa-circle {
    color: black;
}
/* about section styles */
.about {
    margin: 5rem 0;
}
.about-container {
    display: flex;
    justify-content: space-between;
    align-items: flex-start;

}
.about-text {
    width: 50%;
    text-align: center;
}

.about-image img {
    border-radius: 1rem;
}



/* newsletter section styles */

.newsletter {
    margin-top: 9rem;
}

.newsletter-container {
    display: flex;
    justify-content: space-between;
    gap: 1.2rem;
    align-items: flex-start;
}

.newsletter-form {
    border-radius: 1rem;
    border: 1px solid #FF5400;
    padding: 2.5rem;
}

.newsletter-form h4 {
    color: #131318;
    font-size: 1.2rem;
    font-weight: 800;
    margin-bottom: 1rem;
}

.newsletter-form input {
    display: block;
    border-radius: .5rem;
    background: rgba(19, 19, 24, 0.05);
    margin-bottom: 1rem;
    outline: none;
    border: none;
    padding: 1rem 1.15rem;
    width: 24.5rem;
}

.newsletter-form img {
    margin-bottom: 1.2rem;

}

.newsletter-image {
    border-radius: 1rem;
    background-image: url('../Images/newsletter.png');
    background-repeat: no-repeat;
    background-size: 42rem;
    width: 50%;
    height: 24rem;
}

.newsletter-image img {
    position: relative;
    top: 12rem;
    left: 18rem;
    width: 50%;
}

/* footer section styles */
footer {
    background-color: rgba(19, 19, 24, 0.05);
    margin-bottom: 0;
    padding: 6rem;
    margin-top: 4rem;
}

.footer-container {
    text-align: center;
}

.footer-container .nav-title {
    margin: 0 42rem;
}

.footer-container .nav-title h3 {
    font-size: 2rem;
}

.social-icon a {
    margin-right: 3rem;
    font-size: 2rem;
}





@media screen and (max-width:600px) {
    .nav-title {
        font-size: 1.3rem;
    }
    .menu-icon{
        visibility: visible;
    }
    .nav-title {
        margin-right: 3rem;
    }
    nav {
        display: none;
    }
    #checkbox{
        display: none;
    }
    .banner-text {
        padding: .5rem;
    }

    .banner-text h1 {
        font-size: 1.2rem;
        margin-top: 2rem;
    }

    .banner-text p {
        font-size: .85rem;
        margin-bottom: 1rem;
    }

    .banner-form {
        margin: 0;
    }

    .banner-form * {
        display: block;
        margin-top: 1rem;
    }

    .banner-form {
        margin: 0 5rem;
    }

    .banner-form input,
    select,
    button {
        font-size: 1rem;
        padding: .25rem;
        width: 8rem;
    }

    .popular-main {
        flex-direction: column;
    }

    .destination-container {
        display: flex;
        flex-direction: column;
        align-items: center;
    }

    .destination-container img {
        width: 22rem;
    }

    .choose-upper,
    .choose-lower {
        flex-direction: column;
        align-items: center;
    }

    .choose-card {
        width: 81.35%;
    }

    .newsletter-container {
        flex-direction: column;
    }
    .newsletter-form img {
        width: 50%;
    }

    .newsletter-image img {
        width: 50%;
        position: relative;
        top: 14rem;
        left: 10rem;

    }
    .newsletter-form {
        width: 100%;
    }
    .newsletter-form input {
        width: 100%;
    }
    .newsletter-image {
        width: 100%;
    }

    .footer-container {
        padding: 1rem;
    }

    .footer-container .nav-title {
        margin: 0rem;
        gap: .5rem;
        margin-bottom: 1rem;
    }

    .footer-container .line {
        width: 100%;
    }


    .place-container {
        flex-direction: column;
    }

    .place-image img {
        width: 100%;
        margin-top: 2rem;
    }

    .deal-container-1 .deal,
    .deal-container-3 .deal {
        margin-left: 2rem;
    }

    .deal-container-2 .deal {
        margin-right: 2rem;
    }
    .iframe {
        width: 300px;
    }
    .place-text {
        width: 80%;
    }
    .about-container {
        flex-direction: column;
        /* align-items: center; */
    }
    .about-image img {
        width: 100%;
    }
    .about-text {
        width: 100%;
    }



}

